yaml-examples/bookstack/bookstack-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bookstack
  name: bookstack
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    app: bookstack
